feat(admin-api): add fetch single job event endpoint & command (#1972)
